--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Vite + TS</title>
   </head>
   <body>
+
+    <div> 
+      <h1>
+      Merhaba tekrar dünya !
+    </h1>
+    </div>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
